# r8ge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
demos/: piano.cpp
docs/: README.md
docs/core/: README.md
docs/video/: README.md
include/r8ge/: gui.h  r8ge.h  sound.h  video.h
install/Linux/Debug/: testbed
install/Linux/Debug/Engine/Shaders/: test.glsl
install/Linux/Debug/shaders/: model.glsl
r8ge-core/: Ar8ge.cpp  Ar8ge.h  CMakeLists.txt  Core.cpp  Core.h  EntryPoint.cpp  EntryPoint.h  Input.cpp  Input.h  InputStator.cpp  InputStator.h  Logger.cpp  Logger.h  README.md
r8ge-core/events/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  EngineEvents.cpp  EngineEvents.h  Event.cpp  Event.h  EventPayload.cpp  EventPayload.h  EventQueue.cpp  EventQueue.h  KeyEvents.cpp  KeyEvents.h  MouseEvents.cpp  MouseEvents.h  Strokes.cpp  Strokes.h  WindowEvents.cpp  WindowEvents.h
r8ge-core/fileio/: CMakeLists.txt  File.cpp  File.h  FileIO.cpp  FileIO.h  FileReader.cpp  FileReader.h  FileType.cpp  FileType.h  file.cpp  file.h  fileReader.cpp  fileReader.h  fileType.cpp  fileType.h
r8ge-core/fileio/fileReaders/: Binary.cpp  Binary.h  Glsl.cpp  Glsl.h  Gltf.cpp  Gltf.h  Json.cpp  Json.h  Text.cpp  Text.h  TextReader.cpp  TextReader.h  Wave.cpp  Wave.hpp
r8ge-core/instance/: CMakeLists.txt  ConsoleAppInstance.cpp  ConsoleAppInstance.h  GameInstance.cpp  GameInstance.h  Instance.cpp  Instance.h
r8ge-core/instance/layers/: CMakeLists.txt  LayerSwitcher.cpp  LayerSwitcher.h  Layers.cpp  Layers.h
r8ge-core/layers/: CMakeLists.txt  LayerSwitcher.cpp  Layers.cpp  Layers.h
r8ge-core/platform/: CMakeLists.txt  Console.h  EntryPoint.cpp  Time.h  foo.h
r8ge-core/platform/include/: Time.h
r8ge-core/platform/linux/: CMakeLists.txt  EntryPoint.cpp
r8ge-core/platform/linux-impl/: Console.cpp  Time.cpp
r8ge-core/src/: Core.cpp  Core.h
r8ge-core/utility/: CMakeLists.txt  StringFormat.cpp  StringFormat.h  Time.cpp  Time.h  TimeStamp.cpp  TimeStamp.h
r8ge-core/utility/json/: Array.cpp  Array.h  Json.cpp  Json.h  Object.cpp  Object.h  StringKey.cpp  StringKey.h
r8ge-gui/: CMakeLists.txt  test.cpp
r8ge-sound/: CMakeLists.txt  Generators.cpp  Generators.hpp  Instruments.h  Sequencer.cpp  Sequencer.hpp  Sound.cpp  Sound.hpp  Visualiser.cpp  Visualiser.h
r8ge-video/: CMakeLists.txt  EntrytPoint.cpp  EntrytPoint.h  Input.cpp  Input.h  README.md  Video.cpp  Video.h  Window.cpp  Window.h  WindowClass.h  WindowFactory.cpp  WindowFactory.h  WindowManager.hpp
r8ge-video/guiService/: CMakeLists.txt  GUIService.cpp  GUIService.h
r8ge-video/guiService/linux-impl/imgui/: ImGUI.cpp  ImGUI.h
r8ge-video/platform/: CMakeLists.txt  LinuxWindow.cpp  UniversalWindow.cpp  UniversalWindow.h  UniversalWindowManager.hpp  Win32Window.cpp  Win32Window.h  WindowingService.cpp  WindowingService.h
r8ge-video/platform/linux-impl/x11/: Convertor.cpp  X11-convertor.cpp  X11-convertor.h  X11.cpp  X11.h
r8ge-video/renderer/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  MeshTrinagle.cpp  MeshTrinagle.h  Model.cpp  Model.h  ObjectModel.cpp  ObjectModel.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  Types.cpp  Types.h  Vertex.cpp  Vertex.h
r8ge-video/renderingService/: CMakeLists.txt  RenderingService.cpp  RenderingService.h  Vertex.cpp  Vertex.h
r8ge-video/renderingService/buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
r8ge-video/renderingService/context/: CMakeLists.txt
r8ge-video/renderingService/context/X11/: XContext.cpp  XContext.h
r8ge-video/renderingService/context/X11/GLX/: GLXContext.cpp  GLXContext.h
r8ge-video/renderingService/openGL/: CMakeLists.txt  GLConvertor.cpp  GLConvertor.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLService.cpp  GLService.h  GLTexture.cpp  GLTexture.h
r8ge-video/renderingService/programManager/: CMakeLists.txt  Program.cpp  Program.h  ProgramData.cpp  ProgramData.h
r8ge-video/renderingService/textures/: CMakeLists.txt  Texture2D.cpp  Texture2D.h
r8ge-video/types/: Color.cpp  Color.h  Primitives.cpp  Primitives.h  SceneHelper.h  Texture.h  Vertex.cpp  Vertex.h
r8ge-video/windowingService/: CMakeLists.txt  WindowingService.cpp  WindowingService.h
r8ge-video/windowingService/linux-impl/glfw/: Convertor.cpp  Convertor.h  GLFW.cpp  GLFW.h
r8ge-video/windowingService/linux-impl/x11/: Convertor.cpp  Convertor.h  X11.cpp  X11.h
templates/: EmptyGameInstance.cpp  EmptyGameInstanceWithLayers.cpp
templates/plain-game/: CMakeLists.txt  Plain.cpp
templates/plain-game-video/: CMakeLists.txt  Plain.cpp
testbed/: CMakeLists.txt  Plain.cpp  piano.cpp
