add_library(r8ge-core-events
        "Event.cpp"
        "Event.h"
        "EventPayload.cpp"
        "EventPayload.h"
        "EventQueue.cpp"
        "EventQueue.h"
        "KeyEvents.cpp"
        "KeyEvents.h"
        "Strokes.h"
        "MouseEvents.cpp"
        "MouseEvents.h"
        "WindowEvents.cpp"
        "WindowEvents.h"
        "Strokes.cpp"
        "Dispatcher.cpp"
        "Dispatcher.h"
        "EngineEvents.cpp"
        "EngineEvents.h"
)